# Sentinel

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml
deploy/k8s/: configmap.yml  elasticsearch.yml  kafka.yml  sentinel.yml
deploy/terraform/: elasticsearch.tf  kafka.tf  main.tf  variables.tf
docs/adr/: 001-kafka-vs-simple-queue.md  002-isolation-forest-vs-autoencoder.md  003-elasticsearch-vs-postgresql.md  004-normalized-event-schema.md
src/sentinel/: __main__.py  exceptions.py  logger.py
src/sentinel/collector/: models.py
src/sentinel/detector/: features.py  model.py
src/sentinel/storage/: elasticsearch.py
src/sentinel/streaming/: consumer.py  producer.py
tests/unit/: test_features.py  test_models.py
