[project]
name = "p-sentinel"
version = "0.1.0"
description = ""
authors = [
    {name = "Daccors"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "elasticsearch (>=9.3.0,<10.0.0)",
    "confluent-kafka (>=2.13.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "sentinel", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
